add_subdirectory(lethe-fluid-particles)
add_subdirectory(lethe-particles)
add_subdirectory(lethe-fluid-block)
add_subdirectory(lethe-fluid)
add_subdirectory(lethe-fluid-sharp)
add_subdirectory(lethe-fluid-vans)
add_subdirectory(initial_conditions)
add_subdirectory(lethe-fluid-matrix-free)
add_subdirectory(lethe-fluid-nitsche)
add_subdirectory(lethe-rpt-cell-reconstruction-3d)
add_subdirectory(lethe-rpt-fem-reconstruction-3d)
add_subdirectory(lethe-rpt-l2-projection-3d)
