add_subdirectory(lethe-fluid-particles)
add_subdirectory(lethe-fluid-sharp)
add_subdirectory(lethe-particles)
add_subdirectory(lethe-particles-ray-tracing)
add_subdirectory(lethe-fluid-block)
add_subdirectory(lethe-fluid)
add_subdirectory(lethe-fluid-vans)
add_subdirectory(lethe-fluid-matrix-free)
add_subdirectory(lethe-fluid-vans-matrix-free)
add_subdirectory(lethe-fluid-particles-matrix-free)
add_subdirectory(lethe-fluid-nitsche)
